# note

./: .gitignore  dny  常用算子整理.md
.obsidian/: graph.json
Notion/ARM/: ARM.md
Notion/ARM/大模型基础/: 大模型基础.md
Notion/CPP&C/知识点整理/: 6.STL.md  7.排序、经典算法.md  8.设计模式.md  9. modern c++ 及零碎特性.md
Notion/CUDA/: CUDA.md
Notion/CUDA/常用算子整理/: trtllm.md
Notion/CUDA/知识点整理/: cuda graph 的原理和使用.md  global m.md  知识点整理.md
Notion/剩余的事项/: check.md  g.md
Notion/嵌入式基础/: c语言基.md  嵌入式基础.md  芯片基础知识.md
Notion/嵌入式基础/rtos/: rtos.md  rtos链表.md  tick.md
Notion/嵌入式基础/stm32/: qemu win64 stm32 rtos 部署.md  stm32.md
Notion/操作系统/: 随手记.md
Notion/面试整理/02-八股文/: 02-CUDA.md  03-操作系统.md  04-算法相关.md  05-常见大模型.md  08-Linux基础.md  (+1 more)
gemm-compare/claude/: README.md
gemm-compare/codex/: CMakeLists.txt  README.md
gemm-compare/codex/src/: main.cu
llama.cpp-qwen3-test-interface/: README.md
llama.cpp-qwen3-test-interface/src/: llama-context.cpp.snippet.cpp  llama-context.h.snippet.cpp
llama.cpp-qwen3-test-interface/tests/: CMakeLists.txt.snippet.cmake  test-qwen3-graph.cpp
嵌入式的要点/: gpio和总线.md  mcu.md  有哪些重点呢.md  未命名.md
嵌入式的要点呢/: mcu.md  未命名.md
端侧推理教程/: 常用算子整理.md
端侧推理教程/ARM/: 需要背诵的.md
端侧推理教程/CUDA/: 模型咋部署.md
端侧推理教程/内存对齐/: 01-内存对齐.md
端侧推理教程/剩余的事项/: 1.模型下载转换.md  剩余的事项.md
端侧推理教程/操作系统/: gdb.md  profiling.md  操作系统.md  编译记录.md
端侧推理教程/面试整理/: README.md
要/: 1.md  2.C++基础与STL速记.md  3.CUDA与GPU优化速记.md  4.模型部署量化与推理速记.md  6.排序算法C++实现.cpp  9. radix tree.md
面试题准备/: 缓存项目提醒.md
高频面试考点/: README.md
高频面试考点/02-CUDA与GPU/: README.md
高频面试考点/03-操作系统与Linux/: README.md
高频面试考点/07-项目与性能排查/: README.md
(+137 files in other folders)
